fix white text on certain browsers. do not wrap color in rgb
add a backup color: black for older browsers

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -90,10 +90,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  color: #000;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: var(--foreground-rgb);
   background: var(--sand)
 }
 
